@@ -6,7 +6,7 @@
 
 extern _rha_ object_t  proxy_fn(object_t this, symbol_t s);
 
-extern _rha_ object_t  fn_fn(object_t this, tuple_t argnames, object_t fnbody);
+extern _rha_ object_t  fn_fn(object_t env, tuple_t argnames, object_t fnbody);
 extern _rha_ object_t  if_fn(object_t this, bool_t cond, object_t then_code, object_t else_code);
 extern _rha_ void      return_fn(object_t);
 extern _rha_ void      deliver_fn(object_t);
@@ -15,6 +15,8 @@ extern _rha_ void      throw_fn(object_t);
 extern _rha_ object_t  while_fn(object_t this, object_t cond, object_t code);
 extern _rha_ object_t  for_fn(object_t this, symbol_t var, object_t container, object_t code);
 extern _rha_ object_t  try_fn(object_t this, object_t tryblock, symbol_t catchvar, object_t catchblock);
+
+extern _rha_ object_t  colon_fn(object_t a, object_t b);
 
 extern _rha_ object_t  literal(object_t env, list_t parsetree);
 
