@@ -642,12 +642,14 @@ tuple_t resolve_infix_prule_list(list_t parsetree, glist_t *prule_sym_list, symb
 
 tuple_t resolve_assign_prule(object_t env, list_t parsetree, symbol_t prule_sym, glist_t *assign_sym_list)
 {
-  // x = 0            (assign local \x 0)
-  // a.x = 0          (assign a     \x 0)
-  // a(z).x = 0       (assign (a z) \x 0)
-  // f(x) = 0         (extend local \f \(x) 0)
-  // a.f(x) = 0       (extend a     \f \(x) 0)
-  // a(z).f(x) = 0    (extend (a z) \f \(x) 0)
+  // creates          (extend scope symbol context value)
+
+  // x = 0            (extend local \x     void     0)
+  // a.x = 0          (extend a     \x     void     0)
+  // a(z).x = 0       (extend (a z) \x     void     0)
+  // f(x) = 0         (extend local \f     \(x)     0)
+  // a.f(x) = 0       (extend a     \f     \(x)     0)
+  // a(z).f(x) = 0    (extend (a z) \f     \(x)     0)
 
   // resolves the right-most assignment (could be = += -= *= /=)
 
@@ -660,10 +662,9 @@ tuple_t resolve_assign_prule(object_t env, list_t parsetree, symbol_t prule_sym,
   //         (assign lhs rhs)
 
   // all parts:
-  object_t fun = WRAP_SYMBOL(assign_sym);
   object_t scope = WRAP_SYMBOL(local_sym);
   object_t symb = 0;
-  object_t arglist = 0;
+  object_t context = quoted(0); // == (quote void)
 
   // (1) let's first deal with the LHS
   // do we have a dot-expression on the LHS?
@@ -684,8 +685,8 @@ tuple_t resolve_assign_prule(object_t env, list_t parsetree, symbol_t prule_sym,
       list_t l = tuple_to_list(UNWRAP_PTR(TUPLE_T, lhs_obj_last));
       list_popfirst(l);
       lhs_obj_last = WRAP_PTR(TUPLE_T, list_to_tuple(l));
-      arglist = quoted(lhs_obj_last);
-      fun = WRAP_SYMBOL(extend_sym);
+      context = quoted(lhs_obj_last);
+
       // from here *do* go on with (1.2) with the next element
       lhs_obj_last = list_poplast(lhs);
     }
@@ -721,43 +722,33 @@ tuple_t resolve_assign_prule(object_t env, list_t parsetree, symbol_t prule_sym,
   object_t rhs_obj = resolve(env, tuple_get(pre_t, 2));
 
   // finally add it to the tuple
-  tuple_t t = 0;
-  if (arglist) {
-    // extend
-    if (prule_sym != equal_sym)
-      rha_error("(parsing) += and friends require a symbol on lhs");
-    t = tuple_new(5);
-    tuple_set(t, 3, arglist);
-    tuple_set(t, 4, quoted(rhs_obj));  // contains fnbody
+  tuple_t t = tuple_new(6);
+  tuple_set(t, 0, WRAP_SYMBOL(extend_sym));
+  tuple_set(t, 1, WRAP_SYMBOL(local_sym));  // later on lexical scope
+  tuple_set(t, 2, scope);                   // later on calling scope
+  tuple_set(t, 3, symb);
+  tuple_set(t, 4, context);
+  if (prule_sym != equal_sym) {
+    assert((prule_sym==plusequal_sym) 
+	   || (prule_sym==minusequal_sym)
+	   || (prule_sym==timesequal_sym)
+	   || (prule_sym==divideequal_sym));
+    tuple_t rhs = tuple_new(3);
+    tuple_set(rhs, 1, copy_expr(resolve(env, lhs_obj)));
+    tuple_set(rhs, 2, resolve(env, rhs_obj));
+    if (prule_sym==plusequal_sym) 
+      tuple_set(rhs, 0, WRAP_SYMBOL(plus_fn_sym));
+    else if (prule_sym==minusequal_sym) 
+      tuple_set(rhs, 0, WRAP_SYMBOL(minus_fn_sym));
+    else if (prule_sym==timesequal_sym) 
+      tuple_set(rhs, 0, WRAP_SYMBOL(times_fn_sym));
+    else if (prule_sym==divideequal_sym) 
+      tuple_set(rhs, 0, WRAP_SYMBOL(divide_fn_sym));
+    else
+      assert(1==0);
+    rhs_obj = WRAP_PTR(TUPLE_T, rhs);
   }
-  else {
-    // assign
-    t = tuple_new(4);
-    if (prule_sym != equal_sym) {
-      assert((prule_sym==plusequal_sym) 
-	     || (prule_sym==minusequal_sym)
-	     || (prule_sym==timesequal_sym)
-	     || (prule_sym==divideequal_sym));
-      tuple_t rhs = tuple_new(3);
-      tuple_set(rhs, 1, copy_expr(resolve(env, lhs_obj)));
-      tuple_set(rhs, 2, resolve(env, rhs_obj));
-      if (prule_sym==plusequal_sym) 
-	tuple_set(rhs, 0, WRAP_SYMBOL(plus_fn_sym));
-      else if (prule_sym==minusequal_sym) 
-	tuple_set(rhs, 0, WRAP_SYMBOL(minus_fn_sym));
-      else if (prule_sym==timesequal_sym) 
-	tuple_set(rhs, 0, WRAP_SYMBOL(times_fn_sym));
-      else if (prule_sym==divideequal_sym) 
-	tuple_set(rhs, 0, WRAP_SYMBOL(divide_fn_sym));
-      else
-	assert(1==0);
-      rhs_obj = WRAP_PTR(TUPLE_T, rhs);
-    }
-    tuple_set(t, 3, rhs_obj);
-  }
-  tuple_set(t, 0, fun);
-  tuple_set(t, 1, scope);
-  tuple_set(t, 2, symb);
+  tuple_set(t, 5, quoted(rhs_obj));  // contains value
 
   //debug("resolve_assign_prule returns: %o\n", WRAP_PTR(TUPLE_T, 0, t));
   return t;
